--- a/package.json
+++ b/package.json
@@ -1,16 +1,29 @@
 {
-  "name": "GadgetMafia",
+  "name": "gadget-mafia",
+  "scripts": {
+    "lint": "yarn run tslint frontend/**/*.{ts,tsx}",
+    "prettier": "yarn run tslint frontend/**/*.{ts,tsx}  --fix"
+  },
   "private": true,
   "dependencies": {
     "@babel/preset-react": "^7.0.0",
     "@rails/webpacker": "^4.0.2",
+    "@types/react": "^16.8.8",
+    "@types/react-dom": "^16.8.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react_ujs": "^2.4.4"
+    "react_ujs": "^2.4.4",
+    "ts-loader": "^5.3.3",
+    "typescript": "^3.3.3333"
   },
   "devDependencies": {
+    "prettier": "^1.16.4",
+    "tslint": "^5.14.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.0.1",
+    "tslint-react": "^3.6.0",
     "webpack-dev-server": "^3.2.1"
   }
 }
