--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-router-dom": "^5.0.0",
     "react_ujs": "^2.4.4",
     "ts-loader": "^5.3.3",
     "typescript": "^3.3.3333"
