--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "ts-loader": "^5.3.3",
+    "typesafe-actions": "^3.2.1",
     "typescript": "^3.3.3333"
   },
   "devDependencies": {
